--- a/src/components/InputBar.css
+++ b/src/components/InputBar.css
@@ -9,7 +9,7 @@ form {
 }
 
 button {
-    background-color: #3CCF4E !important;
+    background-color: #753188 !important;
     color: white !important;
 }
 
